--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-red-contrib-fastxml",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "A Node-RED node to parse xml strings to json and vice-versa",
     "dependencies": {
         "fast-xml-parser": "4.3.0"
@@ -19,6 +19,7 @@
         "fastxml"
     ],
     "node-red": {
+        "version": ">=2.0.0",
         "nodes": {
             "fastxml": "fastxml.js"
         }
@@ -27,5 +28,8 @@
         "name": "Dave Conway-Jones",
         "email": "dceejay@gmail.com",
         "url": "http://nodered.org"
+    },
+    "engines": {
+        "node": ">=14"
     }
 }
