--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "node-red-contrib-fastxml",
-    "version": "1.1.2",
+    "version": "1.2.0",
     "description": "A Node-RED node to parse xml strings to json and vice-versa",
     "dependencies": {
-        "fast-xml-parser": "~4.3.2"
+        "fast-xml-parser": "^4.4.1"
     },
     "bundledDependencies": [
         "fast-xml-parser"
